Fixed layer0 and layer1 with tb

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,48 @@
+*.wdb
+*.vcd
+*.log
+*.jou
+*.pb
+*.str
+xsim.dir/
+.Xil/
+*.backup.log
+webtalk*.xml
+webtalk*.jou
+xvlog.log
+xvlog.pb
+xelab.log
+xelab.pb
+xsim.log
+simulate.log
+elaborate.log
+compile.log
+
+.*
+
+*.xpr
+*.runs/
+*.cache/
+*.hw/
+*.ip_user_files/
+*.sim/
+*.srcs/
+
+__pycache__/
+*.pyc
+*.pyo
+
+*~
+*.swp
+*.swo
+.*.swp
+\#*\#
+.#*
+
+.DS_Store
+Thumbs.db
+
 TinyYOLOV3-HW
+
 plan.md
 context.md
